--- a/GGJ2017/GGJ2017.CSharp.Editor.csproj
+++ b/GGJ2017/GGJ2017.CSharp.Editor.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.3.5f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -107,6 +105,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\AudioToolkit\AudioToolkit\Editor\AudioController_Editor.cs" />
+    <Compile Include="Assets\AudioToolkit\AudioToolkit\Editor\AudioItemOverview.cs" />
+    <Compile Include="Assets\AudioToolkit\AudioToolkit\Editor\AudioLogView.cs" />
+    <Compile Include="Assets\AudioToolkit\AudioToolkit\Editor\AudioObject_Editor.cs" />
+    <Compile Include="Assets\AudioToolkit\AudioToolkit\Editor\AudioUtility.cs" />
     <Compile Include="Assets\Editor\Helpers\ObjectCreatorHelper.cs" />
     <Compile Include="Assets\Editor\Helpers\ReflectionHelper.cs" />
     <Compile Include="Assets\Editor\Scriptable objects\HierarchyTagsSettings.cs" />
@@ -116,9 +119,9 @@
     <Compile Include="Assets\Editor\Windows\ScriptableObjectCreatorWindow.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\AudioToolkit\Readme.txt" />
     <None Include="Assets\Scripts\PixelPerfect\README.txt" />
     <None Include="Assets\Scripts\PixelPerfect\Scripts\Internal\Resources\PixelPerfectShader.shader" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
