--- a/GGJ2017/GGJ2017.CSharp.csproj
+++ b/GGJ2017/GGJ2017.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.3.5f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -81,7 +79,18 @@
     <Compile Include="Assets\Scripts\Components\Movement\MainCharacterMovement\DirectionDescription.cs" />
     <Compile Include="Assets\Scripts\Components\Movement\MainCharacterMovement\MainCharacterMovementObject.cs" />
     <Compile Include="Assets\Scripts\Components\Presenters\BaseCharacterPresenter.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\CharacterStageComponent.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\Crowd.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\ReactableStageComponents\ReactableStageComponent.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\ReactableStageComponents\Reactions\AnimatorParameterReaction.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\ReactableStageComponents\Reactions\BaseReaction.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\ReactableStageComponents\Reactions\SlowdownReaction.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\Stage.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\StageAreas\AggregatorArea.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\StageAreas\BaseStageArea.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\StageAreas\SimpleStageArea.cs" />
     <Compile Include="Assets\Scripts\Controllers\BaseController.cs" />
+    <Compile Include="Assets\Scripts\Controllers\CameraSizeController.cs" />
     <Compile Include="Assets\Scripts\Controllers\InputControllerSystem\InputCondition.cs" />
     <Compile Include="Assets\Scripts\Controllers\InputControllerSystem\InputController.cs" />
     <Compile Include="Assets\Scripts\Controllers\InputControllerSystem\InputItem.cs" />
@@ -95,11 +104,15 @@
     <Compile Include="Assets\Scripts\Staff\CustomEditor\EditorGUIExtended.cs" />
     <Compile Include="Assets\Scripts\Staff\Helpers\FieldInfoExtended.cs" />
     <Compile Include="Assets\Scripts\Staff\Helpers\GameObjectExtended.cs" />
+    <Compile Include="Assets\Scripts\Staff\Helpers\ObjectCreatorHelper.cs" />
+    <Compile Include="Assets\Scripts\Staff\Helpers\ReflectionHelper.cs" />
     <Compile Include="Assets\Scripts\Staff\Helpers\SystemTypeExtended.cs" />
     <Compile Include="Assets\Scripts\Staff\Helpers\Vector2Helper.cs" />
     <Compile Include="Assets\Scripts\Staff\Singleton\ISingletonMonoBehaviour.cs" />
     <Compile Include="Assets\Scripts\Staff\Singleton\SingletonMonoBehaviour.cs" />
     <Compile Include="Assets\Scripts\Staff\Singleton\UnitySingleton.cs" />
+    <Compile Include="Assets\Scripts\Staff\Windows\BaseWindow.cs" />
+    <Compile Include="Assets\Scripts\Staff\Windows\ScriptableObjectCreatorWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\AudioToolkit\Readme.txt" />
