--- a/GGJ2017/GGJ2017.CSharp.Editor.csproj
+++ b/GGJ2017/GGJ2017.CSharp.Editor.csproj
@@ -123,6 +123,8 @@
     <None Include="Assets\Scripts\PixelPerfect\Scripts\Internal\Resources\PixelPerfectShader.shader" />
     <None Include="Assets\Shaders\BlackWhiteShader.shader" />
     <None Include="Assets\Shaders\LitShader.shader" />
+    <None Include="Assets\Shaders\Simple wave shader.shader" />
+    <None Include="Assets\Shaders\Sprite simple shader.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
