--- a/GGJ2017/GGJ2017.CSharp.csproj
+++ b/GGJ2017/GGJ2017.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.3.5f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -81,6 +83,7 @@
     <Compile Include="Assets\Scripts\Components\Presenters\BaseCharacterPresenter.cs" />
     <Compile Include="Assets\Scripts\Components\StageComponents\CharacterStageComponent.cs" />
     <Compile Include="Assets\Scripts\Components\StageComponents\Crowd.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\Fans\SimpleFan.cs" />
     <Compile Include="Assets\Scripts\Components\StageComponents\ReactableStageComponents\ReactableStageComponent.cs" />
     <Compile Include="Assets\Scripts\Components\StageComponents\ReactableStageComponents\Reactions\AnimatorParameterReaction.cs" />
     <Compile Include="Assets\Scripts\Components\StageComponents\ReactableStageComponents\Reactions\BaseReaction.cs" />
@@ -89,6 +92,9 @@
     <Compile Include="Assets\Scripts\Components\StageComponents\StageAreas\AggregatorArea.cs" />
     <Compile Include="Assets\Scripts\Components\StageComponents\StageAreas\BaseStageArea.cs" />
     <Compile Include="Assets\Scripts\Components\StageComponents\StageAreas\SimpleStageArea.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\Waves\BaseWave.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\Waves\SimpleWave.cs" />
+    <Compile Include="Assets\Scripts\Components\StageComponents\Waves\WaveItems\WaveItem.cs" />
     <Compile Include="Assets\Scripts\Controllers\BaseController.cs" />
     <Compile Include="Assets\Scripts\Controllers\CameraSizeController.cs" />
     <Compile Include="Assets\Scripts\Controllers\InputControllerSystem\InputCondition.cs" />
@@ -104,6 +110,7 @@
     <Compile Include="Assets\Scripts\Staff\Core\OWCTransform.cs" />
     <Compile Include="Assets\Scripts\Staff\CustomEditor\CustomProperties\BindingProperty.cs" />
     <Compile Include="Assets\Scripts\Staff\CustomEditor\EditorGUIExtended.cs" />
+    <Compile Include="Assets\Scripts\Staff\DependentComponents\PositionDependentComponent.cs" />
     <Compile Include="Assets\Scripts\Staff\Helpers\FieldInfoExtended.cs" />
     <Compile Include="Assets\Scripts\Staff\Helpers\GameObjectExtended.cs" />
     <Compile Include="Assets\Scripts\Staff\Helpers\ObjectCreatorHelper.cs" />
