--- a/GGJ2017/GGJ2017.CSharp.Editor.csproj
+++ b/GGJ2017/GGJ2017.CSharp.Editor.csproj
@@ -123,6 +123,7 @@
     <None Include="Assets\Scripts\PixelPerfect\Scripts\Internal\Resources\PixelPerfectShader.shader" />
     <None Include="Assets\Shaders\BlackWhiteShader.shader" />
     <None Include="Assets\Shaders\LitShader.shader" />
+    <None Include="Assets\Shaders\Location shader.shader" />
     <None Include="Assets\Shaders\Simple wave shader.shader" />
     <None Include="Assets\Shaders\Sprite simple shader.shader" />
   </ItemGroup>
