--- a/GGJ2017/GGJ2017.CSharp.Editor.csproj
+++ b/GGJ2017/GGJ2017.CSharp.Editor.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.3.5f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -112,6 +114,7 @@
     <Compile Include="Assets\AudioToolkit\AudioToolkit\Editor\AudioUtility.cs" />
     <Compile Include="Assets\Editor\Scriptable objects\HierarchyTagsSettings.cs" />
     <Compile Include="Assets\Editor\Scripts\CustomEditors\BindingMonoBehaviourEditor.cs" />
+    <Compile Include="Assets\Editor\Scripts\CustomEditors\CrowdGeneratorEditor.cs" />
     <Compile Include="Assets\Editor\Scripts\CustomEditors\PortablePoolEditor.cs" />
     <Compile Include="Assets\Editor\Scripts\CustomEditors\TargetMonoBehaviourEditor.cs" />
     <Compile Include="Assets\Editor\Scripts\HierarchyTags\HierarchyTags.cs" />
